# giistr_api

./: .travis.yml  Cargo.toml  LICENSE-MIT  README.md  api.md  manifest.yml
migrations/20160905174710_create_users/: down.sql  up.sql
migrations/20160905174909_create_repos/: up.sql
migrations/20160905174923_create_repository_tags/: down.sql  up.sql
migrations/20160905175816_create_tags/: up.sql
migrations/20160906121553_create_repository_tag_assocs/: down.sql  up.sql
src/: main.rs
src/api/: context.rs  mod.rs  v1.rs
src/api/repo/: create.rs  delete.rs  get.rs  list.rs  mod.rs
src/api/repository_tag_assoc/: common.rs  create.rs  delete.rs  list_for_repo.rs  list_for_tag.rs  mod.rs
src/api/tag/: common.rs  create.rs  delete.rs  get.rs  list.rs  mod.rs  update.rs
src/api/user/: get.rs  list.rs  mod.rs
src/db/: mod.rs  models.rs  schemas.rs
src/db/repositories/: mod.rs  repo.rs  repository_tag_assoc.rs  tag.rs  user.rs
src/mid/: fake_github.rs  github.rs  mod.rs  simple_cors.rs
travis/: giistr.sqlite
