[package]
name = "giistr_api"
version = "0.1.0"
authors = ["jeremyletang <letang.jeremy@gmail.com>"]

[dependencies]
backit = { git = "https://github.com/jeremyletang/backit", features = ["postgres"] }
#backit = { path = "../backit", features = ["postgres"]}
chrono = "0.2"
dotenv = "0.8.0"
dotenv_macros = "0.9.0"
env_logger = "0.3.4"
hyper = "0.9.10"
iron = "0.4.0"
log = "0.3.6"
mount = "0.2.1"
router = "0.2.0"
serde = "0.8.7"
serde_json = "0.8.2"
serde_macros = "0.8.7"
time = "0.1.35"
unicase = "1.4.0"
diesel = { git = "https://github.com/jeremyletang/diesel", default-features = false, features = ["postgres"] }
diesel_codegen = { git = "https://github.com/jeremyletang/diesel", default-features = false, features = ["postgres"] }
r2d2 = "0.7.0"
r2d2-diesel = { git = "https://github.com/jeremyletang/r2d2-diesel" }
uuid = { version = "0.2", features = ["v4"] }
